--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
     with Internet Explorer.</p>
   </noscript>
   <section id="toolbar" class="float">
-    <nav>
-      <small style="float:right;"><a href="?resetDB=1">reload card info</a></small>
-      <small style="float:right;"><a href="http://allbfcards.com">normal version</a></small>
-      <small style="float:right;"><a href="http://lite.allbfcards.com">lite version</a></small>
+    <nav class="right">
+      <a href="http://allbfcards.com">normal version</a>
+      <a href="http://lite.allbfcards.com">lite version</a>
+      <a id="resetDB" href="?resetDB=1">reload card info</a>
+      <a id="reset" href="#">reset all</a>
     </nav>
-    <h1>allbfcards.com - The Fast BattleForge Card search (Beta)</h1>
+    <h1><strong>allbfcards.com</strong> - The Fast BattleForge Card search <em>(Beta)</em></h1>
     <div id="help" style="display: none;">
       <p>
       </p>
@@ -166,7 +167,7 @@
   </section>
   <footer id="footer">
     Legal: Images and card text are copyright Electronic Arts Inc.<br>
-    Contribute at: <a target="_blank" href="http://docs.google.com/leaf?id=0B3vTOLnTve5fMTZlZGNkNzYtZTQwYS00Y2NlLWI4ZjUtNTZmYzA1OGRiOTM3&amp;hl=en">Google Docs</a><br>
+    Contribute at: <a target="_blank" href="https://docs.google.com/leaf?id=0B_MTpZFrxwLsZDExZTk3MjctZTEwOS00YjMwLThjNzktZGFhNzJkODU5YzBm&hl=en&authkey=CP-a2Z4J">Google Docs</a><br>
     Discuss at: <a target="_blank" href="http://forums.battleforge.com/forum/showthread.php?t=39453">BattleForge Forums</a><br>
   </footer>
 
