updates to support https

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <title>allbfcards.com - The Fast BattleForge Card search</title>
   <meta name="description" content="An AJAX BattleForge Card search covering the Twilight, Renegade, Lost Souls, and Amii editions. Featuring fast searches and basic deck building.">
   <meta name="keywords" content="BattleForge Battle Forge Card Database Search AJAX Google Docs Spreadsheet Deck Building Twilight Renegade Lost Souls Amii">
-	<script type="text/javascript" src="http://code.jquery.com/jquery-1.4.2.js"></script>
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.js"></script>
+	<script type="text/javascript" src="https://code.jquery.com/jquery-1.4.2.js"></script>
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.js"></script>
 	<script type="text/javascript" src="battleforge.js"></script>
   <link rel="icon" type="image/png" href="favicon.png">
-  <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.1.0/build/cssreset/reset-min.css">
+  <link rel="stylesheet" type="text/css" href="https://yui.yahooapis.com/3.1.0/build/cssreset/reset-min.css">
   <link rel="stylesheet" type="text/css" href="style.css">
 <!--[if IE]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -21,12 +21,12 @@
   </noscript>
   <section id="toolbar" class="float">
     <nav class="right">
-      <a href="http://allbfcards.com">normal version</a>
-      <a href="http://lite.allbfcards.com">lite version</a>
+      <a href="https://crccheck.github.io/AllBfCards/">normal version</a>
+      <a href="https://crccheck.github.io/AllBfCards/?lite">lite version</a>
       <a id="resetDB" href="?resetDB=1">reload card info</a>
       <a id="reset" href="#">reset all</a>
     </nav>
-    <h1><strong>allbfcards.com</strong> - The Fast BattleForge Card search <a href="http://github.com/crccheck/AllBfCards/issues"><em>(Beta)</em></a></h1>
+    <h1><strong>allbfcards.com</strong> - The Fast BattleForge Card search <a href="https://github.com/crccheck/AllBfCards/issues"><em>(Beta)</em></a></h1>
     <div id="help" style="display: none;">
       <p>
       </p>
